Fixed the footnote and disclaimer on mobile

--- a/development/scss/scss-framework/_framework.scss
+++ b/development/scss/scss-framework/_framework.scss
@@ -394,7 +394,7 @@ footer span#brand img {
 
 footer p {
   @include tablet-portrait {
-    display: none;
+    display: block;
   }
 }
 
